deploy: 7bc9ab318d0c2a04348f241cfb4e2a05868da8e8

--- a/0.10.x/print.html
+++ b/0.10.x/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Askama (0.10)</title>
+        <title>Askama (0.10.x)</title>
         <meta name="robots" content="noindex" />
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -146,7 +146,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Askama (0.10)</h1>
+                    <h1 class="menu-title">Askama (0.10.x)</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
