--- a/0.10.x/creating_templates.html
+++ b/0.10.x/creating_templates.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Creating templates - Askama (0.10)</title>
+        <title>Creating templates - Askama (0.10.x)</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -145,7 +145,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Askama (0.10)</h1>
+                    <h1 class="menu-title">Askama (0.10.x)</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
