--- a/0.11.x/template_syntax.html
+++ b/0.11.x/template_syntax.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Template syntax - Askama (0.11)</title>
+        <title>Template syntax - Askama (0.11.x)</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -104,7 +104,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Askama (0.11)</h1>
+                    <h1 class="menu-title">Askama (0.11.x)</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
